Update border spacing issue.

--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ body {
     background-color: transparent;
     font-family: 'Gaegu', cursive;
     color: #000000;
-    border-top: 1px solid white;;
     padding-top: 25px;
   }
   
